Change background image in style.css from 100vh to 100% to ensure fully covering page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,7 +91,7 @@ a:hover {
     background-image: url('/static/images/generic_photo.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    height: 100%;
 }
 
 .banner-background-image {
